--- a/Shout/app/src/main/res/layout/activity_my_profile.xml
+++ b/Shout/app/src/main/res/layout/activity_my_profile.xml
@@ -5,36 +5,56 @@
     android:id="@+id/activity_my_profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="es.upm.dam2016g6.shout.MyProfileActivity">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait"
-        android:id="@+id/img_profilePic"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:contentDescription="facebook_profile_picture" />
-
-    <Button
-        android:text="@string/log_out"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_logout"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="onClick"/>
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
 
     <TextView
         android:text="@string/welcome_accountname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tv_welcome"
-        android:layout_below="@+id/img_profilePic"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp" />
+        android:layout_below="@+id/toolbar"
+        android:layout_marginTop="15dp"
+        android:textStyle="normal|bold"
+        android:textSize="20sp"
+        android:textColor="@color/authui_colorActivated" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_mylikes"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait"
+        android:id="@+id/img_profilePic"
+        android:contentDescription="facebook_profile_picture"
+        android:layout_marginTop="15dp"
+        android:layout_width="200dp"
+        android:layout_below="@+id/tv_welcome"
+        android:layout_centerHorizontal="true"
+        android:layout_height="200dp" />
+
+    <TextView
+        android:text="My Facebook Likes:"
+        android:layout_width="match_parent"
+        android:id="@+id/textView"
+        android:textStyle="normal|bold"
+        android:textSize="18sp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="22dp"
+        android:layout_above="@+id/rv_mylikes"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="13dp"
+        android:textColor="@color/authui_colorActivated"/>
 </RelativeLayout>
