--- a/Shout/app/src/main/res/layout/fragment_my_profile.xml
+++ b/Shout/app/src/main/res/layout/fragment_my_profile.xml
@@ -2,12 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_my_profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="es.upm.dam2016g6.shout.MyProfileActivity">
+    tools:context=".MyProfileFragment"
+    android:background="@color/white">
 
-    <TextView
+   <TextView
         android:text="@string/welcome_accountname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,28 +25,21 @@
         android:layout_height="150dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/tv_myLikes"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp" />
-
-    <ImageView
-        app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait"
-        android:id="@+id/img_profilePic"
-        android:contentDescription="facebook_profile_picture"
-        android:layout_marginTop="15dp"
-        android:layout_width="200dp"
-        android:layout_below="@+id/tv_welcome"
-        android:layout_centerHorizontal="true"
-        android:layout_height="200dp" />
+        android:layout_marginRight="8dp"
+        android:background="@color/white"/>
 
     <TextView
-        android:text="My Facebook Likes:"
+        android:text="@string/my_fb_likes_label"
         android:layout_width="match_parent"
-        android:id="@+id/textView"
+        android:id="@+id/tv_myLikes"
         android:textStyle="normal|bold"
         android:textSize="18sp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
-        android:layout_above="@+id/rv_mylikes"
+        android:layout_marginTop="22dp"
+        android:layout_below="@+id/img_profilePic"
         android:layout_alignParentStart="true"
         android:layout_marginStart="13dp"
         android:textColor="@color/authui_colorActivated"/>
@@ -62,19 +55,14 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
-    <com.roughike.bottombar.BottomBar
-        android:id="@+id/bottomBar"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        app:bb_tabXmlResource="@xml/bottombar_tabs"
-        app:bb_activeTabColor="@color/white"
-        app:bb_inActiveTabColor="@color/white"
-        app:bb_activeTabAlpha="1"
-        app:bb_inActiveTabAlpha="0.6"
-        app:bb_titleTextAppearance="@style/TextAppearance.AppCompat.Small"
-        app:bb_showShadow="true"
-        app:theme="@style/AppTheme"
-        />
+    <ImageView
+        app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait"
+        android:id="@+id/img_profilePic"
+        android:contentDescription="@string/fb_profile_picture"
+        android:layout_marginTop="15dp"
+        android:layout_width="200dp"
+        android:layout_below="@+id/tv_welcome"
+        android:layout_centerHorizontal="true"
+        android:layout_height="200dp" />
 
 </RelativeLayout>
