Re-Organize Project Directory Tree

--- a/Shout/app/src/main/res/layout/activity_login.xml
+++ b/Shout/app/src/main/res/layout/activity_login.xml
@@ -9,5 +9,5 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="es.upm.dam2016g6.shout.LoginActivity">
+    tools:context="es.upm.dam2016g6.shout.Activities.LoginActivity">
 </RelativeLayout>
