--- a/Shout/app/src/main/res/layout/fragment_chat_rooms.xml
+++ b/Shout/app/src/main/res/layout/fragment_chat_rooms.xml
@@ -1,14 +1,36 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="es.upm.dam2016g6.shout.Fragments.ChatRoomsFragment"
     android:background="@color/white">
 
-    <TextView
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_chat_rooms"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        />
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/sliding_tabs_chat_rooms"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        style="@style/MyCustomTabLayout"
+        app:tabMode="fixed" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager_chat_rooms"
+        android:layout_width="match_parent"
+        android:layout_marginTop="95dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
+        android:background="@android:color/white" />
 
 </FrameLayout>
