Implement view for chat room creation

--- a/Shout/app/src/main/res/menu/chat_rooms_menu.xml
+++ b/Shout/app/src/main/res/menu/chat_rooms_menu.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- "Mark Favorite", should appear as action button if possible -->
+    <item
+        android:id="@+id/action_new_chat_rooms"
+        app:showAsAction="always"
+        android:title="@string/create_room"
+        android:icon="@drawable/ic_action_add" />
 
 </menu>
