--- a/Shout/app/src/main/res/layout/fragment_chat_rooms.xml
+++ b/Shout/app/src/main/res/layout/fragment_chat_rooms.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="es.upm.dam2016g6.shout.Fragments.ChatRoomsFragment"
+    tools:context="es.upm.dam2016g6.shout.fragments.ChatRoomsFragment"
     android:background="@color/white">
 
     <android.support.v7.widget.Toolbar
