--- a/Shout/app/src/main/res/layout/fragment_my_chat_rooms.xml
+++ b/Shout/app/src/main/res/layout/fragment_my_chat_rooms.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="es.upm.dam2016g6.shout.Fragments.MyChatRoomsFragment"
+    tools:context="es.upm.dam2016g6.shout.fragments.MyChatRoomsFragment"
     android:background="@color/white">
 
     <!-- TODO: Update blank fragment layout -->
