--- a/Shout/app/src/main/res/layout/fragment_my_profile.xml
+++ b/Shout/app/src/main/res/layout/fragment_my_profile.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="15dp"
         android:textStyle="normal|bold"
         android:textSize="20sp"
-        android:textColor="@color/authui_colorActivated" />
+        android:textColor="@color/colorPrimary" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_mylikes"
@@ -42,7 +42,7 @@
         android:layout_below="@+id/img_profilePic"
         android:layout_alignParentStart="true"
         android:layout_marginStart="13dp"
-        android:textColor="@color/authui_colorActivated"/>
+        android:textColor="@color/colorPrimary"/>
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_my_profile"
