--- a/Shout/app/src/main/res/layout/chatroom_item_content_layout.xml
+++ b/Shout/app/src/main/res/layout/chatroom_item_content_layout.xml
@@ -1,21 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container_inner_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="0dp"
+    android:layout_margin="5dp"
     android:layout_centerVertical="true"
     android:layout_centerHorizontal="true"
-    tools:showIn="@layout/like_item_layout">
+    tools:showIn="@layout/chatroom_item_layout">
 
     <!-- todo set up content -->
 
     <TextView
         android:id="@+id/cicl_tv_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="20dp"
+        android:text="Title"
+        android:textStyle="normal|bold" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/cicl_tv_category"
+        android:layout_width="match_parent"
+        android:layout_height="12dp"
+        android:layout_below="@+id/cicl_tv_title"
+        android:text="Category"
+        android:textSize="10sp" />
+    
+    <TextView
+        android:id="@+id/cicl_tv_created"
+        android:layout_width="wrap_content"
+        android:layout_height="12dp"
+        android:layout_below="@+id/cicl_tv_category"
+        android:layout_alignParentStart="true"
+        android:text="Nh ago"
+        android:textSize="10sp"
+        android:textStyle="normal|italic" />
+    
+   <TextView
+        android:id="@+id/cicl_tv_expires"
+        android:layout_width="wrap_content"
+        android:layout_height="12dp"
+        android:text="exp. in Nh "
+        android:textSize="10sp"
+        android:layout_below="@+id/cicl_tv_category"
+        android:layout_alignParentEnd="true"
+        android:textStyle="normal|italic" />
+
+    <ImageView
+        android:id="@+id/cicl_image"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_below="@+id/cicl_tv_expires"
+        app:srcCompat="@drawable/ic_shoutlogo"
+        android:layout_marginTop="5dp"
+        android:layout_centerHorizontal="true"
+        android:scaleType="fitXY" />
+
+    <Button
+        android:id="@+id/cicl_bt_join"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cicl_image"
+        android:text="Join"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/colorPrimary"
+        android:layout_margin="2dp"
+        android:layout_marginTop="5dp"/>
+
+    <Button
+        android:id="@+id/cicl_bt_share"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cicl_image"
+        android:text="Share"
+        android:backgroundTint="@color/colorPrimary"
+        android:textColor="@color/white"
+        android:layout_margin="2dp"
+        android:layout_marginTop="5dp"
+        android:layout_alignParentEnd="true"/>
+
+</RelativeLayout>
