--- a/Shout/app/src/main/res/layout/chatroom_item_content_layout.xml
+++ b/Shout/app/src/main/res/layout/chatroom_item_content_layout.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:text="Title"
+        android:textColor="@color/colorPrimary"
         android:textStyle="normal|bold" />
 
     <TextView
@@ -25,6 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="12dp"
         android:layout_below="@+id/cicl_tv_title"
+        android:textColor="@color/darkGray"
         android:text="Category"
         android:textSize="10sp" />
     
