--- a/Shout/app/src/main/res/layout/fragment_nearby_chat_rooms.xml
+++ b/Shout/app/src/main/res/layout/fragment_nearby_chat_rooms.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginBottom="60dp"
         android:background="@color/white"
         />
 
