--- a/Shout/app/src/main/res/layout/fragment_nearby_chat_rooms.xml
+++ b/Shout/app/src/main/res/layout/fragment_nearby_chat_rooms.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="es.upm.dam2016g6.shout.fragments.NearbyChatRoomsFragment"
-    android:background="@color/white">
+    android:background="@color/card_background">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_nearby_chat_rooms"
@@ -13,7 +13,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="60dp"
-        android:background="@color/white"
+        android:background="@color/card_background"
         />
 
 </FrameLayout>
