--- a/Shout/app/src/main/res/values/colors.xml
+++ b/Shout/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="second_grey">#ffeeeeee</color>
     <color name="card_white">#ffffffff</color>
     <color name="card_shadow">#8c666666</color>
+    <color name="card_background">#f2f2f2</color>
+    <color name="disabled_tab">#D8D8D8</color>
 </resources>
