--- a/Shout/app/src/main/res/layout/fragment_my_chat_rooms.xml
+++ b/Shout/app/src/main/res/layout/fragment_my_chat_rooms.xml
@@ -5,10 +5,13 @@
     tools:context="es.upm.dam2016g6.shout.fragments.MyChatRoomsFragment"
     android:background="@color/white">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="My Chat Rooms" />
+  <android.support.v7.widget.RecyclerView
+      android:id="@+id/rv_my_chat_rooms"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_marginTop="4dp"
+      android:layout_marginBottom="60dp"
+      android:background="@color/card_background"
+      />
 
 </FrameLayout>
