--- a/Shout/app/src/main/res/layout/list_chatroom_item_layout.xml
+++ b/Shout/app/src/main/res/layout/list_chatroom_item_layout.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:layout_height="100dp"
+    >
+
+    <include layout="@layout/list_chatroom_item_content_layout" />
 
 </FrameLayout>
