--- a/Shout/app/src/main/res/values/colors.xml
+++ b/Shout/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="white">#FFFFFF</color>
     <color name="darkGray">#333333</color>
     <color name="second_grey">#ffeeeeee</color>
-    <color name="card_white">#ffffffff</color>
+    <color name="card_white">#ffffff</color>
     <color name="card_shadow">#8c666666</color>
     <color name="card_background">#f2f2f2</color>
     <color name="disabled_tab">#D8D8D8</color>
