--- a/Shout/app/src/main/res/layout/list_chatroom_item_content_layout.xml
+++ b/Shout/app/src/main/res/layout/list_chatroom_item_content_layout.xml
@@ -16,6 +16,7 @@
         android:layout_width="200dp"
         android:layout_height="20dp"
         android:layout_toRightOf="@+id/lcic_iv_thumbnail"
+        android:layout_marginBottom="3dp"
         android:text="Title"
         android:textColor="@color/colorPrimary"
         android:textStyle="normal|bold" />
@@ -32,51 +33,58 @@
 
     <TextView
         android:id="@+id/lcic_tv_lastText"
-        android:layout_width="200dp"
-        android:layout_height="12dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/lcic_iv_thumbnail"
-        android:layout_below="@+id/lcic_tv_title"
+        android:layout_below="@+id/lcic_tv_lastAuthor"
         android:textColor="@color/darkGray"
         android:text="No messages yet."
         android:textSize="10sp" />
 
     <TextView
         android:id="@+id/lcic_tv_lastAuthor"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="12dp"
         android:layout_toRightOf="@+id/lcic_iv_thumbnail"
-        android:layout_below="@+id/lcic_tv_lastText"
+        android:layout_below="@+id/lcic_tv_title"
+        android:layout_marginBottom="3dp"
         android:textColor="@color/darkGray"
         android:text="None"
+        android:textStyle="normal|bold"
         android:textSize="10sp" />
 
     <TextView
         android:id="@+id/lcic_tv_lastTextTime"
-        android:layout_width="200dp"
-        android:layout_height="10dp"
-        android:layout_toRightOf="@+id/lcic_iv_thumbnail"
-        android:layout_below="@+id/lcic_tv_lastAuthor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/lcic_tv_lastAuthor"
+        android:layout_toEndOf="@+id/lcic_tv_lastAuthor"
+        android:layout_marginStart="5dp"
+        android:layout_alignEnd="@+id/lcic_tv_lastText"
         android:textColor="@color/darkGray"
         android:text="Last text time"
-        android:textSize="8sp" />
+        android:textSize="8sp"
+        android:textStyle="normal|italic"/>
 
     <TextView
         android:id="@+id/lcic_tv_createdOn"
-        android:layout_marginTop="5dp"
-        android:layout_width="200dp"
-        android:layout_height="12dp"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/lcic_iv_thumbnail"
-        android:layout_below="@+id/lcic_tv_lastTextTime"
+        android:layout_below="@+id/lcic_tv_lastText"
+        android:layout_marginTop="10dp"
         android:textColor="@color/darkGray"
         android:text="Created on [...]"
         android:textSize="10sp" />
 
     <TextView
         android:id="@+id/lcic_tv_expiresIn"
-        android:layout_width="200dp"
-        android:layout_height="12dp"
-        android:layout_toRightOf="@+id/lcic_iv_thumbnail"
-        android:layout_below="@+id/lcic_tv_createdOn"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/lcic_tv_createdOn"
+        android:layout_below="@+id/lcic_tv_lastText"
+        android:layout_alignBaseline="@id/lcic_tv_createdOn"
+        android:layout_marginStart="5dp"
         android:textColor="@color/darkGray"
         android:text="Expires in [...]"
         android:textSize="10sp" />
@@ -97,7 +105,8 @@
         android:layout_height="50dp"
         android:layout_below="@+id/lcic_tv_title"
         android:layout_alignParentStart="true"
-        app:srcCompat="@drawable/ic_shoutlogo" />
+        app:srcCompat="@drawable/ic_shoutlogo"
+        android:layout_marginEnd="4dp"/>
 
 
 </RelativeLayout>
