--- a/Shout/app/src/main/res/layout/my_chat_item_content_layout.xml
+++ b/Shout/app/src/main/res/layout/my_chat_item_content_layout.xml
@@ -8,14 +8,14 @@
     android:layout_margin="2dp"
     android:layout_centerVertical="true"
     android:layout_centerHorizontal="true"
-    tools:showIn="@layout/chat_item_layout"
+    tools:showIn="@layout/my_chat_item_layout"
     android:background="@color/card_white">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/chat_iv_pic"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         app:srcCompat="@drawable/ic_shoutlogo"
         android:layout_marginEnd="2dp"
         android:layout_marginStart="2dp"
@@ -27,11 +27,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10sp"
-        app:cmv_backgroundColor="#9bd2f2"
-        app:cmv_backgroundColorPressed="#42bbf8"
+        app:cmv_backgroundColor="#88BABABA"
+        app:cmv_backgroundColorPressed="#FFBABABA"
         app:cmv_cornerRadius="3dp"
-        app:cmv_arrowPosition="left"
-        android:layout_toEndOf="@id/chat_iv_pic"
+        app:cmv_arrowPosition="right"
+        android:layout_toStartOf="@id/chat_iv_pic"
         android:layout_centerVertical="true">
 
         <TextView
@@ -51,8 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/chat_tv_user"
-            android:text="Hello World!"
-            android:textColor="#353535"/>
+            android:text="Hello World!" />
 
     </me.himanshusoni.chatmessageview.ChatMessageView>
 
@@ -62,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/chat_cmv"
         android:layout_alignEnd="@id/chat_cmv"
+        android:layout_marginRight="8dp"
         android:textSize="9sp"
         android:text="dd:MM HH:mm" />
 
