User listing and Showing Other Profiles

--- a/Shout/app/src/main/res/layout/list_chatroom_item_content_layout.xml
+++ b/Shout/app/src/main/res/layout/list_chatroom_item_content_layout.xml
@@ -64,6 +64,7 @@
         android:textColor="@color/darkGray"
         android:text="Last text time"
         android:textSize="8sp"
+        android:maxLines="1"
         android:textStyle="normal|italic"/>
 
     <TextView
