--- a/Shout/app/src/main/res/layout/fragment_my_profile.xml
+++ b/Shout/app/src/main/res/layout/fragment_my_profile.xml
@@ -55,14 +55,15 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
-    <ImageView
-        app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait"
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/img_profilePic"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait"
         android:contentDescription="@string/fb_profile_picture"
         android:layout_marginTop="15dp"
-        android:layout_width="200dp"
         android:layout_below="@+id/tv_welcome"
         android:layout_centerHorizontal="true"
-        android:layout_height="200dp" />
+        />
 
 </RelativeLayout>
