--- a/Shout/app/src/main/res/layout/activity_profile.xml
+++ b/Shout/app/src/main/res/layout/activity_profile.xml
@@ -55,7 +55,7 @@
         <Button
             android:id="@+id/profile_bt_friendList"
             android:layout_width="130dp"
-            android:layout_height="wrap_content"
+            android:layout_height="65dp"
             android:layout_centerVertical="true"
             android:layout_marginStart="30dp"
             android:text="ADD FRIEND"
@@ -67,7 +67,7 @@
         <Button
             android:id="@+id/profile_bt_sendMessage"
             android:layout_width="130dp"
-            android:layout_height="wrap_content"
+            android:layout_height="65dp"
             android:layout_alignBaseline="@id/profile_bt_friendList"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="25dp"
