--- a/Shout/app/src/main/res/menu/pm_chat_menu.xml
+++ b/Shout/app/src/main/res/menu/pm_chat_menu.xml
@@ -2,13 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- Settings, should always be in the overflow -->
-    <item android:id="@+id/action_showFriendList"
-        android:title="Show Friends"
+    <item android:id="@+id/action_showProfile"
+        android:title="Show Profile"
         app:showAsAction="never"/>
 
-    <item android:id="@+id/action_logout"
-        android:title="@string/log_out"
+    <item android:id="@+id/action_deleteConversation"
+        android:title="Delete Conversation"
         app:showAsAction="never"/>
 
 </menu>
