--- a/Shout/app/src/main/res/layout/activity_profile.xml
+++ b/Shout/app/src/main/res/layout/activity_profile.xml
@@ -46,10 +46,10 @@
     <RelativeLayout
         android:id="@+id/profile_ll_actions"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="65dp"
         android:layout_below="@id/profile_civ_profilePic"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="10dp"
         android:layout_centerHorizontal="true">
 
         <Button
@@ -62,13 +62,14 @@
             android:backgroundTint="@color/colorPrimary"
             android:maxLines="1"
             android:textColor="@color/white"
-            android:scaleType="fitXY" />
+            android:textSize="13sp"
+            />
 
         <Button
             android:id="@+id/profile_bt_sendMessage"
             android:layout_width="130dp"
             android:layout_height="65dp"
-            android:layout_alignBaseline="@id/profile_bt_friendList"
+            android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="25dp"
             android:layout_marginEnd="30dp"
@@ -76,6 +77,7 @@
             android:text="SEND MESSAGE"
             android:backgroundTint="@color/colorPrimary"
             android:textColor="@color/white"
+            android:textSize="13sp"
             />
     </RelativeLayout>
 
