--- a/Shout/app/src/main/res/layout/user_item_content_layout.xml
+++ b/Shout/app/src/main/res/layout/user_item_content_layout.xml
@@ -30,4 +30,13 @@
         android:textSize="20sp"
         />
 
+    <ImageView
+        android:id="@+id/ul_iv_arrow"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        app:srcCompat="@drawable/ic_action_arrow_right" />
+
+
 </RelativeLayout>
